experiments with tycho