@@ -1,65 +1,14 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
   xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
+  <prerequisites>
+    <maven>3.0</maven>
+  </prerequisites>
   <artifactId>com.restphone.androidproguardscala</artifactId>
-  <properties>
-    <tycho-version>0.14.1</tycho-version>
-  </properties>
-  <build>
-    <resources>
-      <resource>
-        <directory>src/main/java</directory>
-        <excludes>
-          <exclude>**/*.java</exclude>
-        </excludes>
-      </resource>
-      <resource>
-        <directory>src/main/scala</directory>
-        <excludes>
-          <exclude>**/*.java</exclude>
-        </excludes>
-      </resource>
-    </resources>
-    <plugins>
-      <plugin>
-        <groupId>net.alchim31.maven</groupId>
-        <artifactId>scala-maven-plugin</artifactId>
-        <version>3.1.3</version>
-        <executions>
-          <execution>
-            <id>compile</id>
-            <goals>
-              <goal>compile</goal>
-            </goals>
-            <phase>compile</phase>
-          </execution>
-          <execution>
-            <id>test-compile</id>
-            <goals>
-              <goal>testCompile</goal>
-            </goals>
-            <phase>test-compile</phase>
-          </execution>
-          <execution>
-            <phase>process-resources</phase>
-            <goals>
-              <goal>compile</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+  <version>0.0.48-SNAPSHOT</version>
   <packaging>eclipse-plugin</packaging>
   <parent>
     <groupId>com.restphone</groupId>
@@ -67,80 +16,269 @@
     <version>0.0.48-SNAPSHOT</version>
     <relativePath>..\com.restphone.androidproguardscala.parent</relativePath>
   </parent>
-  <dependencies>
-    <dependency>
-      <groupId>com.restphone</groupId>
-      <artifactId>androidproguardscalalib_2.10</artifactId>
-      <version>0.4-SNAPSHOT</version>
-    </dependency>
-  </dependencies>
+
+  <properties>
+    <encoding>UTF-8</encoding>
+    <!-- p2 repositories location -->
+    <repo.eclipse.indigo>http://download.eclipse.org/releases/indigo/</repo.eclipse.indigo>
+    <repo.eclipse.juno>http://download.eclipse.org/releases/juno/</repo.eclipse.juno>
+    <repo.scala-ide.root>http://download.scala-ide.org</repo.scala-ide.root>
+
+    <!-- fixed versions -->
+    <tycho.version>0.16.0</tycho.version>
+    <scala.plugin.version>3.0.2</scala.plugin.version>
+
+    <!-- tycho test related -->
+    <tycho.test.OSspecific></tycho.test.OSspecific>
+    <tycho.test.jvmArgs>-Xmx800m -XX:MaxPermSize=256m -Dsdtcore.headless
+      ${tycho.test.OSspecific}</tycho.test.jvmArgs>
+
+    <!-- dependencies repos -->
+    <eclipse.codename>indigo</eclipse.codename>
+    <repo.eclipse>${repo.eclipse.indigo}</repo.eclipse>
+
+    <!-- some default values, can be overwritten by profiles -->
+    <scala.version>2.9.3-SNAPSHOT</scala.version>
+    <version.suffix>2_09</version.suffix>
+    <scala.version.short>2.9</scala.version.short>
+    <version.tag>local</version.tag>
+    <repo.scala-ide>${repo.scala-ide.root}/releases-29/stable/site</repo.scala-ide>
+    <junit.version>4.10</junit.version>
+  </properties>
+
+  <profiles>
+    <profile>
+      <!-- this is the default profile, using the stable Scala build -->
+      <id>scala-2.10.0</id>
+      <properties>
+        <scala.version>2.10.0</scala.version>
+      </properties>
+    </profile>
+    <profile>
+      <!-- Scala trunk -->
+      <id>scala-trunk</id>
+      <properties>
+        <scala.version>2.10.0-SNAPSHOT</scala.version>
+        <version.suffix>2_10</version.suffix>
+        <scala.version.short>2.10</scala.version.short>
+        <repo.scala-ide>${repo.scala-ide.root}/nightly-update-master-trunk</repo.scala-ide>
+      </properties>
+    </profile>
+
+    <profile>
+      <!-- some configuration for tests run by tycho on Mac OS -->
+      <id>macOs</id>
+      <activation>
+        <os>
+          <family>mac</family>
+        </os>
+      </activation>
+      <properties>
+        <tycho.test.OSspecific>-Dosgi.ws=cocoa -XstartOnFirstThread</tycho.test.OSspecific>
+      </properties>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.eclipse.tycho</groupId>
+              <artifactId>tycho-surefire-plugin</artifactId>
+              <configuration>
+                <dependencies>
+                  <dependency>
+                    <artifactId>org.eclipse.jdt.launching.macosx</artifactId>
+                    <type>eclipse-plugin</type>
+                  </dependency>
+                </dependencies>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
+  </profiles>
+
+  <!-- scm configuration is require to extract the github hash -->
+  <scm>
+    <connection>scm:git://github.com/skyluc/plugin.git</connection>
+    <url>https://github.com/skyluc/plugin</url>
+  </scm>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>13.0.1</version>
+      </dependency>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>${junit.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.restphone</groupId>
+        <artifactId>androidproguardscalalib_2.10</artifactId>
+        <version>0.4-SNAPSHOT</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
   <repositories>
     <repository>
       <id>snapshots</id>
       <url>http://localhost:8081/nexus/content/groups/public</url>
       <snapshots>
         <enabled>true</enabled>
-        <!-- never, daily, interval:X (where X is in minutes) or always -->
         <updatePolicy>interval:1</updatePolicy>
       </snapshots>
       <releases>
         <enabled>false</enabled>
       </releases>
     </repository>
+    <repository>
+      <id>sonatype.release</id>
+      <name>Sonatype maven release repository</name>
+      <url>https://oss.sonatype.org/content/repositories/releases/</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>sonatype.snapshot</id>
+      <name>Sonatype maven snapshot repository</name>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <snapshots>
+        <updatePolicy>daily</updatePolicy>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>scala-ide</id>
+      <name>Scala IDE p2 repository</name>
+      <layout>p2</layout>
+      <url>${repo.scala-ide}</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>eclipse.${eclipse.codename}</id>
+      <name>Eclipse p2 repository</name>
+      <layout>p2</layout>
+      <url>${repo.eclipse}</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
   </repositories>
-  <scm>
-    <url>git://github.com/banshee/AndroidProguardScala.git</url>
-  </scm>
-  <issueManagement>
-    <url>https://github.com/banshee/AndroidProguardScala/issues</url>
-  </issueManagement>
-  <version>0.0.48-SNAPSHOT</version>
-  <profiles>
-    <profile>
-      <!-- pull the data needed to add the version numbers to the manifests -->
-      <id>set-versions</id>
-      <dependencies>
-        <dependency>
-          <groupId>org.scala-ide</groupId>
-          <artifactId>build-tools_2.9.2</artifactId>
-          <version>0.2.0</version>
-        </dependency>
-      </dependencies>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>exec-maven-plugin</artifactId>
-            <version>1.2.1</version>
-            <executions>
-              <execution>
-                <id>set-versions</id>
-                <goals>
-                  <goal>java</goal>
-                </goals>
-              </execution>
-            </executions>
-            <configuration>
-              <classpathScope>compile</classpathScope>
-              <mainClass>org.scalaide.buildtools.UpdateAddonManifests</mainClass>
-              <arguments>
-                <argument>${repo.scala-ide}</argument>
-              </arguments>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-      <repositories>
-        <repository>
-          <!-- extra repository containing the build package -->
-          <id>typesafe-ide</id>
-          <name>Typesafe IDE repository</name>
-          <url>http://repo.typesafe.com/typesafe/ide-2.9</url>
-          <snapshots>
-            <enabled>true</enabled>
-          </snapshots>
-        </repository>
-      </repositories>
-    </profile>
-  </profiles>
+
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.eclipse.tycho</groupId>
+          <artifactId>tycho-surefire-plugin</artifactId>
+          <version>${tycho.version}</version>
+          <configuration>
+            <useUIHarness>false</useUIHarness>
+            <useUIThread>false</useUIThread>
+            <argLine>${tycho.test.jvmArgs}</argLine>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-maven-plugin</artifactId>
+        <version>${tycho.version}</version>
+        <extensions>true</extensions>
+      </plugin>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-compiler-plugin</artifactId>
+        <version>${tycho.version}</version>
+        <configuration>
+          <excludeResources>
+            <excludeResource>**/*.scala</excludeResource>
+          </excludeResources>
+        </configuration>
+      </plugin>
+      <plugin>
+        <!-- configuration of the scala compiler -->
+        <groupId>net.alchim31.maven</groupId>
+        <artifactId>scala-maven-plugin</artifactId>
+        <version>${scala.plugin.version}</version>
+        <executions>
+          <execution>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>compile</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <jvmArgs>
+            <jvmArg>-Xms1512m</jvmArg>
+            <jvmArg>-Xmx4024m</jvmArg>
+          </jvmArgs>
+          <scalaVersion>2.10.0</scalaVersion>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-source-plugin</artifactId>
+        <version>${tycho.version}</version>
+        <executions>
+          <execution>
+            <id>attach-source</id>
+            <goals>
+              <goal>plugin-source</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.1.2</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <!-- for setting a better qualifier -->
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-packaging-plugin</artifactId>
+        <version>${tycho.version}</version>
+        <configuration>
+          <format>'${version.tag}-${version.suffix}-'yyyyMMddHHmm'-${buildNumber}'</format>
+          <archiveSite>true</archiveSite>
+        </configuration>
+      </plugin>
+      <!-- plugin used to extract the git hash -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>buildnumber-maven-plugin</artifactId>
+        <version>1.1</version>
+        <executions>
+          <execution>
+            <phase>validate</phase>
+            <goals>
+              <goal>create</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <doCheck>false</doCheck>
+          <doUpdate>false</doUpdate>
+          <shortRevisionLength>7</shortRevisionLength>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
